# Finfess

./: .gitignore  README.md  docker-compose.yml
backend/: dockerfile  pyproject.toml
backend/scripts/: init.sh
backend/src/: manage.py
backend/src/api/: urls.py
backend/src/finfess/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  dockerfile
